# study-tracker

./: .mise.toml  .pre-commit-config.yaml  .release-please-manifest.json
.devcontainer/: .devcontainer.json  devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  update-gitops.yaml
e2e/: e2e_test.py  pyproject.toml
kubernetes/: setup_cluster_local
scripts/: setup  setup_cluster_gitops  setup_deploy_key  setup_gitops  setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/demo/: Dockerfile
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
